[package]
authors = ["Webb Technologies Inc."]
description = "Pallet that handles anonymity mining claims."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "pallet-anonymity-mining-claims"
repository = "https://github.com/webb-tools/protocol-substrate"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-linkable-tree = { path = "../linkable-tree", default-features = false }
pallet-hasher = { path = "../hasher", default-features = false }
pallet-claims-verifier = { path = "../claims-verifier", default-features = false }
pallet-mt = { path = "../mt", default-features = false }
pallet-signature-bridge = { path = "../../pallets/signature-bridge", default-features = false }
pallet-token-wrapper = { path = "../token-wrapper", default-features = false }
pallet-vanchor = { path = "../vanchor", default-features = false }
pallet-vanchor-handler = { path = "../../pallets/vanchor-handler", default-features = false }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
webb-primitives = { path = "../../primitives", features=["hashing", "verifying", "field_ops"], default-features = false }

ark-std = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
ark-ff = { version = "^0.3.0", optional=true, default-features = false }
ark-relations = { version = "^0.3.0", optional=true, default-features = false }
arkworks-setups = { version = "1.2.1", optional=true, features = ["r1cs"], default-features = false }
ark-circom = { git = "https://github.com/vacp2p/ark-circom", optional=true, branch = "wasm", default-features = false, features = ["circom-2"] }
wasmer = { version = "2.3.0", optional=true, default-features = false }
# circom-proving = { path = "../../circom-proving", optional = true, default-features = false }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", optional=true, rev = "765817f", default-features = false, features = ["parallel"] }

[dev-dependencies]
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
arkworks-setups = { version = "1.2.1", features = ["r1cs"], default-features = false }
hex = "0.4"
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "polkadot-v0.9.36", default-features = false }
pallet-key-storage = { path = "../key-storage" }
pallet-timestamp = { default-features = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-vanchor-verifier = { path = "../vanchor-verifier", default-features = false }
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }

# For ark-circom
circom-proving = { path = "../../circom-proving", default-features = false }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", default-features = false, features = ["parallel"] }
ark-circom = { git = "https://github.com/vacp2p/ark-circom", branch = "wasm", default-features = false, features = ["circom-2"] }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
once_cell = "1.14.0"
cfg-if = "1.0"
wasmer = { version = "2.3.0", default-features = false }
num-traits = "0.2.11"
thiserror = "1.0.0"
color-eyre = "0.6.1"
serde_json = "1.0.48"

[features]
default = ["std", "wasmer/sys-default"]
runtime-benchmarks = [
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "ark-ff",
  "arkworks-setups/r1cs",
  "ark-relations",
  "ark-circom/circom-2",
  "ark-groth16/parallel",
  # "circom-proving",
  "wasmer/sys-default"
]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "webb-primitives/std",
  "webb-primitives/hashing",
  "frame-benchmarking/std",
  "orml-currencies/std",
  "orml-tokens/std",
  "orml-traits/std",
  "pallet-asset-registry/std",
  "pallet-balances/std",
  "pallet-vanchor/std",
  "pallet-mt/std",
  "pallet-vanchor-verifier/std",
  "pallet-token-wrapper/std",

]
wasm = ["wasmer/js", "wasmer/std"]
