[package]
name = "pallet-asset-registry"
version = "0.1.0"
description = "Pallet for asset registry management"
authors = ["GalacticCouncil"]
edition = "2018"
homepage = "https://github.com/galacticcouncil/basilisk-node"
license = "Apache 2.0"
repository = "https://github.com/galacticcouncil/basilisk-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
codec = { default-features = false, features = ["derive", "max-encoded-len"], package = "parity-scale-codec", version = "2.2.0" }
primitive-types = { default-features = false, version = "0.8.0" }
serde = { features = ["derive"], optional = true, version = "1.0.101" }
darkwebb-primitives = { path = "../../primitives", default-features = false }

# ORML dependencies
orml-traits = { path = "../../open-runtime-module-library/traits", default-features = false }

# Substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# Optionals
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
polkadot-xcm = { package = "xcm", git = "https://github.com/paritytech/polkadot", branch = "master", default-features = false }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  "serde/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "darkwebb-primitives/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "sp-api/std",
  "frame-benchmarking/std",
  "sp-io/std",
  "polkadot-xcm/std"
]